--- a/info/Ron.html
+++ b/info/Ron.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div style="display: flex;">
+        <img src="https://media.harrypotterfanzone.com/ron-weasley-chamber-of-secrets-portrait-2.jpg" style="width: 400px; height: 400px; margin: 50px;" alt="">
+        <p style="margin: 5%; font-size: large;">
+            Рональд Билиус «Рон» Уизли (англ. Ronald Bilius «Ron» Weasley) — один из главных персонажей Поттерианы, друг и одноклассник Гарри Поттера и Гермионы Грейнджер, член Золотого Трио. Младший сын в семье Уизли.
+            Обладатель специальной награды Хогвартса «За заслуги перед школой», полученной в 1993 году за спасение школы от чудовища Тайной комнаты — василиска.
+        </p>
 </body>
 </html>
