--- a/info/grean.html
+++ b/info/grean.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div style="display: flex;">
+        <img src="https://w.forfun.com/fetch/11/11663e814d67f774405461ec0fd3029c.jpeg" style="width: 400px; height: 400px; margin: 50px;" alt="">
+        <p style="margin: 5%; font-size: large;">
+            Гермиона Джин Грейнджер (англ. Hermione Jean Granger) — одна из главных героинь Поттерианы, подруга и однокурсница Гарри Поттера и Рона Уизли, член Золотого Трио. Единственная дочь мистера Грейнджера и его жены[1]. Играет важную роль во всех событиях, которые происходят в жизни Гарри.
+            Родилась Гермиона 19 сентября 1979 года. В одиннадцать лет девочка узнала, что на самом деле она волшебница и зачислена в Хогвартс. В этой Школе магии и волшебства её распределяют на факультет Гриффиндор, также туда попадают Гарри Поттер, Рон и Джинни Уизли (на курс младше), её будущие лучшие
+            друзья. Гермиона, по всей видимости, самая старшая среди своих одноклассников,
+            и не могла поступить в Хогвартс годом раньше, так как ученику на момент поступления должно быть полных одиннадцать лет. Большинство же её одноклассников родились в 1980 году.
+        </p>
 </body>
 </html>
